--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <p id="mors-paragraph-1">
         [Translated from Polish]
         December 17, 1947
-        Incident Report: Missing Train Update
+        Incident Report: Missing Train Update - 
         
         Train expected to arrive at Warsaw station at midnight December 8 from the sanatorium, for further eastward travel, failed to meet its schedule, 
         disappearing somewhere on the 24 mile train line between the sanatorium and Warsaw station amidst a heavy snowstorm. 
